[metadata]
name = devenv
description = Command line tool for high-level configuration of Docker Compose.
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = dgferigo@gmail.com
license = GPL
platforms = any
url = https://github.com/diegoferigo/devenv

project_urls =
    Changelog = https://github.com/diegoferigo/devenv/releases
    Tracker = https://github.com/diegoferigo/devenv/issues
    Source = https://github.com/diegoferigo/devenv

keywords =
    docker
    compose
    development
    environment
    image
    container

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
zip_safe = False
package_dir =
    =src
python_requires = >=3.7
install_requires =
    PyYAML

[options.packages.find]
where = src

[options.extras_require]
style =
    black
    isort
all =
    %(style)s

[options.entry_points]
console_scripts =
    devenv = devenv.__main__:main
